--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
-    "setup": "echo DATABASE_URL='your_database://user:your_password@localhost:port/databasenase?schema=public' > .env" 
+    "setup": "echo DATABASE_URL='your_database://user:your_password@localhost:port/databaseName?schema=public' > .env" 
   },
   "keywords": [],
   "author": "",
